compiler/toc_hir_lowering/tests/snapshots/lowering__lower_type_path.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "\n    type a : int\n    type not_yet: a.b.c.d.e\n    "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..50): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..45): []
        StmtItem@(FileId(1), 5..17): ItemId(0)
          Type@(FileId(1), 5..17): "a"@(FileId(1), 10..11)
            Primitive@(FileId(1), 14..17): Int
        StmtItem@(FileId(1), 22..45): ItemId(1)
          Type@(FileId(1), 22..45): "not_yet"@(FileId(1), 27..34)
error in file FileId(1) at 36..45: unsupported type
| error in file FileId(1) for 36..45: type paths are not handled yet

