compiler/toc_hir_lowering/tests/snapshots/lowering__lower_var_def-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: var a

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..5): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..5): []
        StmtItem@(FileId(1), 0..5): ItemId(0)
          ConstVar@(FileId(1), 0..5): var "a"@(FileId(1), 4..5)
error in file FileId(1) at 4..5: unexpected end of file
| error in file FileId(1) for 4..5: expected `,`, `:` or `:=` after here

